eks-fargate-helloworld-lab1/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    app: dev
spec:
  containers:
  - name: web-app
    image: ietvijay/hello-world-web:v1
    ports:
      - containerPort: 8080
