eks-fargate-helloworld-lab1/k8s/app-2021.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-ns
  name: deployment-2021
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2021
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2021
    spec:
      containers:
      - image: ietvijay/hello-world-web:v1
        imagePullPolicy: Always
        name: app-2021
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: my-ns
  name: service-2021
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2021
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: my-ns
  name: ingress-2021
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-2021
              servicePort: 80
