eks-fargate-helloworld-lab1/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ps-nodeport
              servicePort: 80
